Fix footnotes line size and vertical alignment

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -254,3 +254,12 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+/**
+ * Footnotes
+ */
+sup, sub {
+  vertical-align: baseline;
+  position: relative;
+  top: -0.4em;
+}
